--- a/index_form.html
+++ b/index_form.html
@@ -44,8 +44,15 @@
       opacity: 0;
     }
 
-    .headline {
-      text-align:center
+    .v-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .v-card-title {
+      margin: 0;
     }
   </style>
 </head>
