修正版_テスト

--- a/index_form.html
+++ b/index_form.html
@@ -14,7 +14,7 @@
       align-items: center;
       justify-content: center;
     }
-    
+
     #app {
       background: rgba(0,0,0,0);
     }
@@ -25,6 +25,9 @@
       color: #2e7d32; /* テキストカラーを設定 */
       border: none; /* ボーダーを削除 */
       box-shadow: none; /* シャドウを削除 */
+      text-align: center; /* テキストを中央揃え */
+      font-family: 'MS Mincho', serif; /* 明朝体フォントを設定 */
+      font-size: 3em; /* フォントサイズを大きく設定 */
     }
 
     .v-alert.info {
@@ -32,6 +35,9 @@
       color: #0277bd; /* テキストカラーを設定 */
       border: none; /* ボーダーを削除 */
       box-shadow: none; /* シャドウを削除 */
+      text-align: center; /* テキストを中央揃え */
+      font-family: 'MS Mincho', serif; /* 明朝体フォントを設定 */
+      font-size: 1.5em; /* フォントサイズを設定 */
     }
 
     .v-alert {
