修正版_テスト_1

--- a/index_form.html
+++ b/index_form.html
@@ -40,6 +40,18 @@
       font-size: 1.5em; /* フォントサイズを設定 */
     }
 
+    .v-card-text {
+      display: flex;
+      justify-content: center; /* 中央揃え */
+      align-items: center; /* 中央揃え */
+      height: 100%; /* 高さを設定して中央に配置 */
+      text-align: center; /* テキストを中央揃え */
+    }
+
+    .v-alert span {
+      display: inline-block; /* テキストの配置を調整 */
+    }
+
     .v-alert {
       transition: opacity 0.5s ease;
       border-radius: 8px; /* 丸みを帯びた角 */
