--- a/index_form.html
+++ b/index_form.html
@@ -24,14 +24,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px; /* 必要に応じて調整 */
-    color: green; /* 必要に応じて色を調整 */
-}
-    
-  </style>
+    margin: 10px 0px 10px 0px;
+    font-family: 'Times New Roman', serif;
+    font-size:65px;
+    color: black; 
+    }
+    </style>
 </head>
 <body>
-  
   <div id="bird">
     <div id="app" v-cloak>
       <v-app>
