--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       height: 100%;
       background-color: #f0f0f0;
     }
-    /* フォームコンテナのスタイル設定 */
+    /* ログインフォームのスタイル設定 */
     .login-form {
       width: 100%;
       max-width: 400px;
-      margin: 50px auto; /* 上下に50pxのマージン、中央揃え */
+      margin: 50px auto;
       padding: 20px;
       background-color: #ffffff;
       border-radius: 8px;
@@ -33,8 +33,8 @@
       text-align: center;
       font-size: 24px;
       margin-bottom: 20px;
-      color: #000000; /* 色を濃い黒に変更 */
-      font-weight: bold; /* 文字を太くする */
+      color: #000000; 
+      font-weight: bold;
     }
 
     .member-signup {
@@ -56,7 +56,6 @@
         <v-row>
           <v-col cols="12">
             <v-form class="login-form">
-              <!-- タイトルを追加 -->
               <div class="form-title">ログイン</div>
               
               <v-text-field
@@ -120,7 +119,6 @@
             });
 
             if (response.status === 200) {
-              // ログイン成功後の処理
               window.location.href = 'index_form.html'; 
             }
           } catch (error) {
