--- a/index_SignUp.html
+++ b/index_SignUp.html
@@ -70,7 +70,6 @@
       text-decoration: underline;
     }
   </style>
-  <!-- Axios CDN -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -96,13 +95,12 @@
       <div id="formMessage" class="error"></div>
     </form>
 
-    <!-- 戻るリンク -->
     <a href="index.html" class="back-link">戻る</a>
   </div>
 
   <script>
     document.getElementById('userForm').addEventListener('submit', async function(event) {
-      event.preventDefault(); // フォームのデフォルトの送信を防ぐ
+      event.preventDefault(); 
 
       // 入力フィールドの取得
       const nickname = document.getElementById('nickname');
@@ -115,13 +113,11 @@
       const passwordError = document.getElementById('passwordError');
       const formMessage = document.getElementById('formMessage');
 
-      // エラーメッセージの初期化
       nicknameError.textContent = '';
       idError.textContent = '';
       passwordError.textContent = '';
       formMessage.textContent = '';
 
-      // バリデーションフラグ
       let isValid = true;
 
       // ニックネームのバリデーション
@@ -157,26 +153,22 @@
         isValid = false;
       }
 
-      // バリデーション成功時の処理
       if (isValid) {
         try {
-          // フォームデータの収集
           const formData = {
             Nickname: nickname.value,
             ID: id.value,
             Password: password.value
           };
 
-          // サーバーにデータを送信
           const response = await axios.post('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT', formData);
 
-          // レスポンスの処理
           formMessage.textContent = response.data.Message;
           formMessage.style.color = response.status === 200 ? 'green' : 'red';
 
-          // 成功時の処理
+          // 成功時
           if (response.status === 200) {
-            // 2秒後にリダイレクトする
+            // 2秒後にリダイレクト
             setTimeout(() => {
               window.location.href = 'index_SignUpResult.html';
             }, 2000);
