--- a/index_SignUpResult.html
+++ b/index_SignUpResult.html
@@ -18,7 +18,7 @@
       height: 100%;
       width: 100%;
       background-color: #f0f0f0;
-      overflow: hidden; /* スクロールを無効化 */
+      overflow: hidden; 
     }
 
     /* コンテナのスタイル設定 */
@@ -29,11 +29,11 @@
       height: 100vh;
       width: 100vw;
       background-color: #f0f0f0;
-      padding: 20px; /* 内側の余白 */
-      box-sizing: border-box; /* パディングを含めて全体の幅を計算 */
+      padding: 20px; 
+      box-sizing: border-box; 
     }
 
-    /* カードのスタイル設定 */
+    /* コンテンツのスタイル設定 */
     .content {
       width: 100%;
       max-width: 400px;
@@ -55,13 +55,13 @@
     }
 
     .v-icon {
-      color: #4caf50; /* Material Designのグリーン */
+      color: #4caf50;
     }
 
     .v-btn {
       margin-top: 20px;
       width: 100%;
-      max-width: 300px; /* ボタンの最大幅 */
+      max-width: 300px; 
     }
   </style>
 </head>
@@ -97,7 +97,7 @@
       vuetify: new Vuetify(),
       methods: {
         goToLogin() {
-          window.location.href = 'index.html'; // ログインフォームへの遷移
+          window.location.href = 'index.html'; 
         }
       }
     });
