--- a/index_SignUp.html
+++ b/index_SignUp.html
@@ -163,15 +163,18 @@
 
           const response = await axios.post('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT', formData);
 
-          formMessage.textContent = response.data.Message;
-          formMessage.style.color = response.status === 200 ? 'green' : 'red';
-
-          // 成功時
           if (response.status === 200) {
-            // 2秒後にリダイレクト
+            formMessage.textContent = response.data.Message;
+            formMessage.style.color = 'green';
+
+            // 成功時
             setTimeout(() => {
               window.location.href = 'index_SignUpResult.html';
             }, 2000);
+          } else if (response.status === 409) {
+            // 既存のIDまたはニックネームがある場合
+            formMessage.textContent = response.data.Message;
+            formMessage.style.color = 'red';
           }
         } catch (error) {
           formMessage.textContent = '送信中にエラーが発生しました: ' + error.message;
@@ -182,4 +185,3 @@
   </script>
 </body>
 </html>
-
