--- a/index_SignUp.html
+++ b/index_SignUp.html
@@ -163,30 +163,24 @@
 
           const response = await axios.post('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT', formData);
 
-          formMessage.textContent = response.data.Message;
-          formMessage.style.color = response.status === 200 ? 'green' : 'red';
+          if (response.data.Message.includes('ニックネームが既に使用されています')) {
+            nicknameError.textContent = response.data.Message;
+          } else if (response.data.Message.includes('IDが既に使用されています')) {
+            idError.textContent = response.data.Message;
+          } else {
+            formMessage.textContent = response.data.Message;
+            formMessage.style.color = response.status === 200 ? 'green' : 'red';
 
-          // 成功時
-          if (response.status === 200) {
-            // 2秒後にリダイレクト
-            setTimeout(() => {
-              window.location.href = 'index_SignUpResult.html';
-            }, 2000);
+            // 成功時
+            if (response.status === 200) {
+              // 2秒後にリダイレクト
+              setTimeout(() => {
+                window.location.href = 'index_SignUpResult.html';
+              }, 2000);
+            }
           }
         } catch (error) {
-          // エラーレスポンスの解析
-          if (error.response && error.response.data) {
-            const errorData = error.response.data;
-            if (errorData.Message.includes("ニックネーム")) {
-              nicknameError.textContent = errorData.Message;
-            } else if (errorData.Message.includes("ID")) {
-              idError.textContent = errorData.Message;
-            } else {
-              formMessage.textContent = errorData.Message;
-            }
-          } else {
-            formMessage.textContent = '送信中にエラーが発生しました: ' + (error.message || '不明なエラー');
-          }
+          formMessage.textContent = '送信中にエラーが発生しました: ' + error.message;
           formMessage.style.color = 'red';
         }
       }
