--- a/index_SignUp.html
+++ b/index_SignUp.html
@@ -70,6 +70,7 @@
       text-decoration: underline;
     }
   </style>
+  <!-- Axios CDN -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -95,12 +96,13 @@
       <div id="formMessage" class="error"></div>
     </form>
 
+    <!-- 戻るリンク -->
     <a href="index.html" class="back-link">戻る</a>
   </div>
 
   <script>
     document.getElementById('userForm').addEventListener('submit', async function(event) {
-      event.preventDefault(); 
+      event.preventDefault(); // フォームのデフォルトの送信を防ぐ
 
       // 入力フィールドの取得
       const nickname = document.getElementById('nickname');
@@ -113,14 +115,16 @@
       const passwordError = document.getElementById('passwordError');
       const formMessage = document.getElementById('formMessage');
 
+      // エラーメッセージの初期化
       nicknameError.textContent = '';
       idError.textContent = '';
       passwordError.textContent = '';
       formMessage.textContent = '';
 
+      // バリデーションフラグ
       let isValid = true;
 
-      // ニックネーム制御
+      // ニックネームのバリデーション
       if (nickname.value.length === 0) {
         nicknameError.textContent = 'ニックネームは必須です';
         isValid = false;
@@ -129,7 +133,7 @@
         isValid = false;
       }
 
-      // ID制御
+      // IDのバリデーション
       if (!/^[a-zA-Z0-9]*$/.test(id.value)) {
         idError.textContent = 'IDは英数字で入力してください';
         isValid = false;
@@ -141,7 +145,7 @@
         isValid = false;
       }
 
-      // パスワード制御
+      // パスワードのバリデーション
       if (!/^[a-zA-Z0-9]*$/.test(password.value)) {
         passwordError.textContent = 'パスワードは英数字で入力してください';
         isValid = false;
@@ -153,31 +157,29 @@
         isValid = false;
       }
 
+      // バリデーション成功時の処理
       if (isValid) {
         try {
+          // フォームデータの収集
           const formData = {
             Nickname: nickname.value,
             ID: id.value,
             Password: password.value
           };
 
+          // サーバーにデータを送信
           const response = await axios.post('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT', formData);
 
-          if (response.data.Message.includes('ニックネームが既に使用されています')) {
-            nicknameError.textContent = response.data.Message;
-          } else if (response.data.Message.includes('IDが既に使用されています')) {
-            idError.textContent = response.data.Message;
-          } else {
-            formMessage.textContent = response.data.Message;
-            formMessage.style.color = response.status === 200 ? 'green' : 'red';
+          // レスポンスの処理
+          formMessage.textContent = response.data.Message;
+          formMessage.style.color = response.status === 200 ? 'green' : 'red';
 
-            // 成功時
-            if (response.status === 200) {
-              // 2秒後にリダイレクト
-              setTimeout(() => {
-                window.location.href = 'index_SignUpResult.html';
-              }, 2000);
-            }
+          // 成功時の処理
+          if (response.status === 200) {
+            // 2秒後にリダイレクトする
+            setTimeout(() => {
+              window.location.href = 'index_SignUpResult.html';
+            }, 2000);
           }
         } catch (error) {
           formMessage.textContent = '送信中にエラーが発生しました: ' + error.message;
@@ -188,3 +190,4 @@
   </script>
 </body>
 </html>
+
